# src/main/kotlin/com/basicsteps/multipos/config/ProtectedEndpointUri.kt
@@ -1,0 +1,7 @@
+package com.basicsteps.multipos.config
+
+enum class ProtectedEndpointUri(val endpoint: String) {
+    VERIFICATION("/api/v1/protected/verification");
+
+    fun value() = endpoint
+}
