# src/main/kotlin/com/basicsteps/multipos/verticles/SignInHandler.kt
@@ -7,6 +7,7 @@ import com.basicsteps.multipos.event_bus_channels.SignInHandlerChannel
 import com.basicsteps.multipos.managers.db.DbManager
 import com.basicsteps.multipos.model.sign_in.SignInMapper
 import com.basicsteps.multipos.model.sign_in.SignInResponseMapper
+import com.basicsteps.multipos.model.sign_in.VerificationMapper
 import com.basicsteps.multipos.utils.JsonUtils
 import io.netty.handler.codec.http.HttpResponseStatus
 import io.vertx.core.AsyncResult
@@ -17,51 +18,32 @@ import io.vertx.ext.auth.oauth2.OAuth2ClientOptions
 import io.vertx.ext.auth.oauth2.OAuth2FlowType
 import io.vertx.ext.auth.oauth2.OAuth2Response
 import io.vertx.ext.auth.oauth2.impl.AccessTokenImpl
-import io.vertx.ext.auth.oauth2.providers.KeycloakAuth
-import io.vertx.ext.web.Router
-import io.vertx.ext.web.handler.OAuth2AuthHandler
 
 
 class SignInHandler(dbManager: DbManager) : AbstractDbVerticle(dbManager) {
 
-    var oauth2: OAuth2Auth? = null
-    var handler: OAuth2AuthHandler? = null
-
     override fun start() {
         super.start()
-//        initKeycloak()
         initConsumers()
     }
 
-    private fun initKeycloak() {
-        val keycloakJson = JsonObject("{\n" +
-                "\"realm\": \"master\",\n" +
-                "\"bearer-only\": true,\n" +
-                "\"auth-server-url\": \"http://localhost:8080/auth\",\n" +
-                "\"ssl-required\": \"external\",\n" +
-                "\"realm-public-key\": \"MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAn9Xya697ZVZzQidld4uCwRoWmLyWBDQQhn+EL1e0WDUWq9v39OBpM+HadkYlOMvfU1A8ohGZZVBkKV4w35gkm3bFPluCPsWxdcqD1NNF6BnIC6bRicgP/4beeehff8nWI3mFAfH7Q7Ik8mm8BDQYhOPRx50JBkDiIQ7AlAjNJ+5/eIj6Pt/eZSmMSk+vM4Xu64E0mCZfHpN+VPQejNBz7h9nEdi3swIIo0ot2+5PZGELX/2Dek7cY4RMKGb+rvU6ug3UvZHQ985KuubKsWMCs8A80yWSoA6umw1DC5rAmc5jo/6giWawuFj5jFZRx69CcMSx1VaEJ5lS4LmAi5sXuQIDAQAB\",\n" +
-                "\"resource\": \"vertx\",\n" +
-                "\"use-resource-role-mappings\": true,\n" +
-                "\"credentials\": {\n" +
-                "\"secret\": \"eda18747-3d11-456f-a553-d8e140cfaf58\"\n" +
-                "}\n" +
-                "}")
-
-        oauth2 = KeycloakAuth
-                .create(vertx, OAuth2FlowType.AUTH_CODE, keycloakJson)
-
-        handler = OAuth2AuthHandler.create(oauth2,
-                "http://localhost:8081/")
-        val router = Router.router(vertx)
-        handler?.setupCallback(router.get("/api/v1/protected/callback"))
-        router.route("/api/v1/protected/*").handler(handler)
-
+    private fun initConsumers() {
+        vertx.eventBus().consumer<String>(SignInHandlerChannel.SIGN_IN.value(), { message: Message<String>? -> this.signInHandler(message!!) })
+        vertx.eventBus().consumer<String>(SignInHandlerChannel.VERIFICATION.value(), { message: Message<String>? -> this.verification(message!!) })
     }
 
-    private fun initConsumers() {
-        vertx.eventBus().consumer<String>(SignInHandlerChannel.SIGN_IN.value(), {
-            message: Message<String>? -> this.signInHandler(message!!)
-        })
+    private fun verification(message: Message<String>) {
+        val username = message.body()
+        val users = dbManager.usersClient?.realm(KeycloakConfig.REALM)?.users()?.search(username)
+
+        if (users != null && !users.isEmpty()) {
+            val foundUser = users.get(0)
+            val tenantId = foundUser.attributes.get("X-TENANT-ID")?.get(0).toString()
+            val name = foundUser.firstName + " " + foundUser.lastName
+            message.reply(MultiPosResponse(VerificationMapper(username, name, tenantId), null, "Success", HttpResponseStatus.OK.code()).toJson())
+        } else
+            message.reply(MultiPosResponse<Any>(null, "$username not found", "Error", HttpResponseStatus.UNAUTHORIZED.code()).toJson())
+
     }
 
     private fun signInHandler(message: Message<String>) {
@@ -91,7 +73,9 @@ class SignInHandler(dbManager: DbManager) : AbstractDbVerticle(dbManager) {
                 token.fetch(KeycloakConfig.USER_INFO_PATH, {event: AsyncResult<OAuth2Response>? ->
                     if (event?.succeeded()!!) {
                         data.mail = event.result().body().toJsonObject().getString("preferred_username")
-                        data.username = event.result().body().toJsonObject().getString("name")
+                        data.tenantId = dbManager.usersClient?.realm(KeycloakConfig.REALM)?.users()?.search(data.mail)?.get(0)?.attributes?.get("X-TENANT-ID")?.get(0).toString()
+//                        data.username = dbManager.usersClient?.realm(KeycloakConfig.REALM)?.users()?.search(data.mail)?.get(0)?.firstName!! + " " +
+//                                dbManager.usersClient?.realm(KeycloakConfig.REALM)?.users()?.search(data.mail)?.get(0)?.lastName!!
                         message.reply(MultiPosResponse(data, null, "Success", HttpResponseStatus.OK.code()).toJson())
                     } else {
                         message.reply(MultiPosResponse<Any>(null, event.cause().toString(), "error", HttpResponseStatus.UNAUTHORIZED.code()).toJson())
