# src/main/resources/api.yaml
@@ -8,203 +8,217 @@ info:
 
 paths:
   /api/v1/sign-up:
-      post:
-        summary: sign up end point
-        operationId: sign-up
-        tags:
-          - sign up
-          - registration
-        parameters:
-          - name: signUpObject
-            in: query
-            description: How many items to return at one time (max 100)
-            required: false
-            schema:
-              type: integer
+    post:
+      summary: sign up end point
+      operationId: sign-up
+      tags:
+        - sign up
+        - registration
+      parameters:
+        - name: signUpObject
+          in: query
+          description: How many items to return at one time (max 100)
+          required: false
+          schema:
+            type: integer
 
-        responses:
-          '200':
-            description: An paged array of pets
-            content:
-              application/json:
-                schema:
-                  $ref: "#/components/schemas/Pet"
-          '400':
-            description:
+      responses:
+        '200':
+          description: An paged array of pets
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Pet"
+        '400':
+          description:
 
-          default:
-            description: unexpected error
-            content:
-              application/json:
-                schema:
-                  $ref: "#/components/schemas/Pet"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Pet"
 
 
 
   /api/v1/sign-in:
-        post:
-          summary: sign up end point
-          operationId: sign-in
-          tags:
-            - sign up
-            - registration
-          parameters:
-            - name: signUpObject
-              in: query
-              description: How many items to return at one time (max 100)
-              required: false
+    post:
+      summary: sign up end point
+      operationId: sign-in
+      tags:
+        - sign up
+        - registration
+      parameters:
+        - name: signUpObject
+          in: query
+          description: How many items to return at one time (max 100)
+          required: false
+          schema:
+            type: integer
+
+      responses:
+        '200':
+          description: An paged array of pets
+          content:
+            application/json:
               schema:
-                type: integer
+                $ref: "#/components/schemas/Pet"
+        '400':
+          description:
 
-          responses:
-            '200':
-              description: An paged array of pets
-              content:
-                application/json:
-                  schema:
-                    $ref: "#/components/schemas/Pet"
-            '400':
-              description:
-
-            default:
-              description: unexpected error
-              content:
-                application/json:
-                  schema:
-                    $ref: "#/components/schemas/Pet"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Pet"
   /api/v1/confirm-access-code:
-        post:
-          summary: confirmAccessCode
-          operationId: confirm-access-code
-          tags:
-            - sign up
-            - registration
-          parameters:
-            - name: signUpObject
-              in: query
-              description: How many items to return at one time (max 100)
-              required: false
+    post:
+      summary: confirmAccessCode
+      operationId: confirm-access-code
+      tags:
+        - sign up
+        - registration
+      parameters:
+        - name: signUpObject
+          in: query
+          description: How many items to return at one time (max 100)
+          required: false
+          schema:
+            type: integer
+
+      responses:
+        '200':
+          description: An paged array of pets
+          content:
+            application/json:
               schema:
-                type: integer
+                $ref: "#/components/schemas/Pet"
+        '400':
+          description:
 
-          responses:
-            '200':
-              description: An paged array of pets
-              content:
-                application/json:
-                  schema:
-                    $ref: "#/components/schemas/Pet"
-            '400':
-              description:
-
-            default:
-              description: unexpected error
-              content:
-                application/json:
-                  schema:
-                    $ref: "#/components/schemas/Pet"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Pet"
   /api/v1/check-email:
-          post:
-            summary: checkEmail
-            operationId: check-email
-            tags:
-              - sign up
-              - registration
-            parameters:
-              - name: signUpObject
-                in: query
-                description: How many items to return at one time (max 100)
-                required: false
-                schema:
-                  type: integer
+    post:
+      summary: checkEmail
+      operationId: check-email
+      tags:
+        - sign up
+        - registration
+      parameters:
+        - name: signUpObject
+          in: query
+          description: How many items to return at one time (max 100)
+          required: false
+          schema:
+            type: integer
 
-            responses:
-              '200':
-                description: An paged array of pets
-                content:
-                  application/json:
-                    schema:
-                      $ref: "#/components/schemas/Pet"
-              '400':
-                description:
+      responses:
+        '200':
+          description: An paged array of pets
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Pet"
+        '400':
+          description:
 
-              default:
-                description: unexpected error
-                content:
-                  application/json:
-                    schema:
-                      $ref: "#/components/schemas/Pet"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Pet"
   /api/v1/get-access-code:
-            post:
-              summary: checkEmail
-              operationId: get-access-code
-              tags:
-                - sign up
-                - registration
-              parameters:
-                - name: signUpObject
-                  in: query
-                  description: How many items to return at one time (max 100)
-                  required: false
-                  schema:
-                    type: integer
+    post:
+      summary: checkEmail
+      operationId: get-access-code
+      tags:
+        - sign up
+        - registration
+      parameters:
+        - name: signUpObject
+          in: query
+          description: How many items to return at one time (max 100)
+          required: false
+          schema:
+            type: integer
 
-              responses:
-                '200':
-                  description: An paged array of pets
-                  content:
-                    application/json:
-                      schema:
-                        $ref: "#/components/schemas/Pet"
-                '400':
-                  description:
+      responses:
+        '200':
+          description: An paged array of pets
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Pet"
+        '400':
+          description:
 
-                default:
-                  description: unexpected error
-                  content:
-                    application/json:
-                      schema:
-                        $ref: "#/components/schemas/Pet"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Pet"
   /api/v1/protected/verification:
-              post:
-                summary: checkEmail
-                operationId: verification
-                tags:
-                  - sign up
-                  - registration
-                parameters:
-                  - name: signUpObject
-                    in: query
-                    description: How many items to return at one time (max 100)
-                    required: false
-                    schema:
-                      type: integer
+    post:
+      summary: checkEmail
+      operationId: verification
+      security:
+        - OAuth2: [read, write, profile]
+      tags:
+        - sign up
+        - registration
+      parameters:
+        - name: signUpObject
+          in: query
+          description: How many items to return at one time (max 100)
+          required: false
+          schema:
+            type: integer
 
-                responses:
-                  '200':
-                    description: An paged array of pets
-                    content:
-                      application/json:
-                        schema:
-                          $ref: "#/components/schemas/Pet"
-                  '400':
-                    description:
+      responses:
+        '200':
+          description: An paged array of pets
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Pet"
+        '400':
+          description:
 
-                  default:
-                    description: unexpected error
-                    content:
-                      application/json:
-                        schema:
-                          $ref: "#/components/schemas/Pet"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Pet"
+
 
 components:
+  securitySchemes:
+    ApiKey:
+      type: apiKey
+      name: Authorization
+      in: header
+    OAuth2:
+      type: oauth2
+      description: See https://developers.getbase.com/docs/rest/articles/oauth2/requests
+      flows:
+        password:
+          tokenUrl:  http://localhost:8080/auth/realms/master/protocol/openid-connect/token
+          scopes:
+            read: Grant read-only access to all your data except for the account and user info
+            write: Grant write-only access to all your data except for the account and user info
+            profile: Grant read-only access to the account and user info only
+
   schemas:
     Pet:
-      type: object
-      properties:
-        result:
-          type: string
-    SignUpObject:
       type: object
       properties:
         result:
